{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 310,
  "lineage": "7db7e47d-c0ab-f737-85a3-a7b0c2745c05",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:security-group/sg-0eb5fb877caea73d7",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0eb5fb877caea73d7",
            "ingress": [],
            "name": "eks-adarsh20210708071034457500000007",
            "name_prefix": "eks-adarsh",
            "owner_id": "717384963683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-adarsh-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "eks-adarsh-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:security-group/sg-0f1f2d11220922b91",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0f1f2d11220922b91",
            "ingress": [],
            "name": "eks-adarsh20210708071034508200000008",
            "name_prefix": "eks-adarsh",
            "owner_id": "717384963683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-adarsh-eks_worker_sg",
              "kubernetes.io/cluster/eks-adarsh": "owned"
            },
            "tags_all": {
              "Name": "eks-adarsh-eks_worker_sg",
              "kubernetes.io/cluster/eks-adarsh": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-192955211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eb5fb877caea73d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2467673851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb5fb877caea73d7",
            "self": false,
            "source_security_group_id": "sg-0f1f2d11220922b91",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3849871929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f1f2d11220922b91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-899943488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1f2d11220922b91",
            "self": false,
            "source_security_group_id": "sg-0eb5fb877caea73d7",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3190031765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1f2d11220922b91",
            "self": false,
            "source_security_group_id": "sg-0eb5fb877caea73d7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2914740359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f1f2d11220922b91",
            "self": false,
            "source_security_group_id": "sg-0f1f2d11220922b91",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e9e01a2cb77344ef",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-36-214.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.36.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0496f36635db5bffc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-40-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.40.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e54e4789b861b725",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-197-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.197.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:internet-gateway/igw-0501b8536626e0309",
            "id": "igw-0501b8536626e0309",
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9e01a2cb77344ef",
            "connectivity_type": "public",
            "id": "nat-0862979dd7fcbef85",
            "network_interface_id": "eni-01f92fbd3d757dd5f",
            "private_ip": "10.0.101.194",
            "public_ip": "3.109.36.214",
            "subnet_id": "subnet-037236987988fadd3",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0496f36635db5bffc",
            "connectivity_type": "public",
            "id": "nat-02d3ca71c77198387",
            "network_interface_id": "eni-0bd15b2aa2aea9913",
            "private_ip": "10.0.102.135",
            "public_ip": "13.235.40.148",
            "subnet_id": "subnet-09cd8e4d6a4f88566",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e54e4789b861b725",
            "connectivity_type": "public",
            "id": "nat-0288f8fb46768e60f",
            "network_interface_id": "eni-05b65a8d9dd2c2be3",
            "private_ip": "10.0.103.108",
            "public_ip": "13.127.197.171",
            "subnet_id": "subnet-0c1c6d91d5179eb9e",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-ap-south-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0701c87f6f19abeba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0862979dd7fcbef85",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0701c87f6f19abeba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acf6945fced11a641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02d3ca71c77198387",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acf6945fced11a64",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ebf7e58cd5097f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0288f8fb46768e60f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ebf7e58cd5097f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0501b8536626e0309",
            "id": "r-rtb-010ef4d26f1cd6ec91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010ef4d26f1cd6ec9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:route-table/rtb-0701c87f6f19abeba",
            "id": "rtb-0701c87f6f19abeba",
            "owner_id": "717384963683",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:route-table/rtb-0acf6945fced11a64",
            "id": "rtb-0acf6945fced11a64",
            "owner_id": "717384963683",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:route-table/rtb-03ebf7e58cd5097f0",
            "id": "rtb-03ebf7e58cd5097f0",
            "owner_id": "717384963683",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:route-table/rtb-010ef4d26f1cd6ec9",
            "id": "rtb-010ef4d26f1cd6ec9",
            "owner_id": "717384963683",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05404fe7335d23d64",
            "route_table_id": "rtb-0701c87f6f19abeba",
            "subnet_id": "subnet-0e82f8806c14c05e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba6379634484c44",
            "route_table_id": "rtb-0acf6945fced11a64",
            "subnet_id": "subnet-09776e8590307aba7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09caa7aacc9bfbbac",
            "route_table_id": "rtb-03ebf7e58cd5097f0",
            "subnet_id": "subnet-0b4888a1b90619945"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbc3b2105531950a",
            "route_table_id": "rtb-010ef4d26f1cd6ec9",
            "subnet_id": "subnet-037236987988fadd3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9dbfe8f2bd1a4db",
            "route_table_id": "rtb-010ef4d26f1cd6ec9",
            "subnet_id": "subnet-09cd8e4d6a4f88566"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e476d84d13094b25",
            "route_table_id": "rtb-010ef4d26f1cd6ec9",
            "subnet_id": "subnet-0c1c6d91d5179eb9e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-0e82f8806c14c05e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e82f8806c14c05e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-09776e8590307aba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09776e8590307aba7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-0b4888a1b90619945",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b4888a1b90619945",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-037236987988fadd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-037236987988fadd3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-09cd8e4d6a4f88566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-09cd8e4d6a4f88566",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:subnet/subnet-0c1c6d91d5179eb9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0c1c6d91d5179eb9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc-public-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca6472360f0b23c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717384963683:vpc/vpc-0bca6472360f0b23c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037951107d0b419d2",
            "default_route_table_id": "rtb-031c9d6258b124ac2",
            "default_security_group_id": "sg-0ca9efc712332eaa9",
            "dhcp_options_id": "dopt-c4d97daf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bca6472360f0b23c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-031c9d6258b124ac2",
            "owner_id": "717384963683",
            "tags": {
              "Environment": "kafka",
              "Name": "eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "kafka",
              "Name": "eks-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}